added postgre in vercel, server in frankfurt

--- a/.env
+++ b/.env
@@ -4,3 +4,14 @@ CLOUDINARY_CLOUD_NAME="davq6ljpn"
 CLOUDINARY_API_KEY="559398686546262"
 CLOUDINARY_API_SECRET="-jmOJEoxqzjUjsUH8fEvuvj1-6E"
 CLOUDINARY_URL="cloudinary://559398686546262:-jmOJEoxqzjUjsUH8fEvuvj1-6E@davq6ljpn"
+
+
+
+POSTGRES_URL="postgres://default:bVP8wZoU4QpX@ep-spring-darkness-a23gy710-pooler.eu-central-1.aws.neon.tech:5432/verceldb?sslmode=require"
+POSTGRES_PRISMA_URL="postgres://default:bVP8wZoU4QpX@ep-spring-darkness-a23gy710-pooler.eu-central-1.aws.neon.tech:5432/verceldb?sslmode=require&pgbouncer=true&connect_timeout=15"
+POSTGRES_URL_NO_SSL="postgres://default:bVP8wZoU4QpX@ep-spring-darkness-a23gy710-pooler.eu-central-1.aws.neon.tech:5432/verceldb"
+POSTGRES_URL_NON_POOLING="postgres://default:bVP8wZoU4QpX@ep-spring-darkness-a23gy710.eu-central-1.aws.neon.tech:5432/verceldb?sslmode=require"
+POSTGRES_USER="default"
+POSTGRES_HOST="ep-spring-darkness-a23gy710-pooler.eu-central-1.aws.neon.tech"
+POSTGRES_PASSWORD="bVP8wZoU4QpX"
+POSTGRES_DATABASE="verceldb"
