--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "cloudinary": "^2.4.0",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.439.0",
-    "next": "14.2.5",
+    "next": "^14.2.24",
     "react": "^18",
     "react-dom": "^18",
+    "react-loader-spinner": "^6.1.6",
+    "swr": "^2.2.5",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
